opam-version: "2.0"
synopsis: "Literals for Optint integers"
maintainer: ["Reynir Björnsson <reynir@reynir.dk>"]
authors: ["Reynir Björnsson <reynir@reynir.dk>"]
license: "ISC"
tags: ["ppx" "optint"]
homepage: "https://github.com/reynir/ppx_optint"
bug-reports: "https://github.com/reynir/ppx_optint/issues"
depends: [
  "ocaml"
  "dune" {>= "3.5"}
  "optint" {>= "0.1.0"}
  "ppxlib" {>= "0.7.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/reynir/ppx_optint.git"
